--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "start": "set NODE_ENV=production && node app.js",
-
-    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
+    "test": "npx cypress open",
     "lint": "./node_modules/eslint/bin/eslint.js . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
   },
